THIS IS THE CHANGELOG OF THE "maxLik" PACKAGE

Please note that only the most significant changes are reported here.
A full ChangeLog is available in the log messages of the SVN repository
on R-Forge.

      CHANGES IN VERSION 1.3-6 (2015-11-08)


      CHANGES IN VERSION 1.3-4 (2015-11-08)

* If Hessian is not negative definite in maxNRCompute, the program now
  attempts to correct this repeatedly, but not infinite number of
  times.  If Marquardt selected, it uses Marquardt lambda and it's
  update method.

* Fixed an issue where summary.maxLik did not use 'eigentol' option for 
  displaying standard errors

   
      CHANGES IN VERSION 1.3-2 (2015-10-28)

* Corrected a bug that did not permit maxLik to pass additional arguments 
  to the likelihood function

      CHANGES IN VERSION 1.3-0 (2015-10-24)
     
* maxNR & friends now support argument 'qac' (quadratic approximation
  correction) option that allows to choose the behavior if the next
  guess performs worse than the previous one.  This includes the
  original step halving while keeping direction, and now also
  Marquardt's (1963) shift toward the steepest gradient.

* all max** functions now take control options in the form as
  'control=list(...)', analogously as 'optim'.  The former method of
  directly supplying options is preserved for compatibility reasons.

* sumt, and stdEr method for 'maxLik' are now in namespace

* the preferred way to specify the amount of debugging information is
  now 'printLevel', not 'print.level'.


      CHANGES IN VERSION 1.2-4 (2014-12-31)

* Equality constraints (SUMT) checks conformity of the matrices

* coef.maxim() is now exported

* added argument "digits" to print.summary.maxLik()

* added argument "digits" to condiNumber.default()

* further arguments to condiNumber.maxLik() are now passed to
condiNumber.default() rather than to hessian()


      CHANGES IN VERSION 1.2-0 (2013-10-22)

* Inequality constraints now support multiple constraints 