@@ -1,3 +1,4 @@
 ^\.Rproj\.user$
 ^.*\.Rproj$
 ^.*_privateTest\.R$
+^TODO\.txt$
