@@ -1,6 +1,6 @@
 Package: maxLik
 Version: 1.3-5
-Date: 2016-02-12
+Date: 2016-02-14
 Title: Maximum Likelihood Estimation and Related Tools
 Author: Ott Toomet <otoomet@gmail.com>,
    Arne Henningsen <arne.henningsen@gmail.com>,
