@@ -2,6 +2,7 @@ export( "activePar" )
 export( "compareDerivatives" )
 export( "condiNumber" )
 export( "fnSubset" )
+export( "gradient" )
 export( "hessian" )
 export( "maxBFGS" )
 export( "maxBFGSR" )
@@ -46,6 +47,7 @@ S3method( "coef", "summary.maxLik" )
 S3method( "condiNumber", "default" )
 S3method( "condiNumber", "maxLik" )
 S3method( "estfun", "maxLik" )
+S3method( "gradient", "maxim" )
 S3method( "hessian", "default" )
 S3method( "logLik", "maxLik" )
 S3method( "logLik", "summary.maxLik" )
