@@ -1,4 +1,6 @@
-\name{estfun.maxLik}
+\name{gradient}
+\alias{gradient}
+\alias{gradient.maxim}
 \alias{estfun.maxLik}
 
 \title{Extract Gradients Evaluated at each Observation}
@@ -8,50 +10,57 @@
    see \code{\link[sandwich]{estfun}}).
 }
 \usage{
-\method{estfun}{maxLik}( x, ... )
+\method{estfun}{maxLik}(x, ...)
+\method{gradient}{maxim}(x, ...)
 }
 \arguments{
-   \item{x}{an object of class \code{maxLik}.}
+   \item{x}{an object inheriting from class \code{maxim} (for \code{gradient})
+     or \code{maxLik}. (for \code{estfun}.)}
    \item{\dots}{further arguments (currently ignored).}
 }
 \value{
-   Matrix of log-likelihood gradients
+  \item{\code{gradient}}{vector, objective function gradient at estimated
+    maximum (or the last calculated value
+    if the estimation did not converge.)}
+  \item{\code{estfun}}{
+    matrix, observation-wise log-likelihood gradients
    at the estimated parameter value
-   evaluated at each observation.  Observations in rows, parameters in columns.
+   evaluated at each observation.  Observations in rows, parameters in columns.}
 }
 \section{Warnings}{
-   The \pkg{sandwich} package must be loaded before this method
-   can be used.
+   The \pkg{sandwich} package must be loaded in order to use \code{estfun}.
 
-   This method works only if the observaton-specific gradient information
+   \code{estfun} only works if the observaton-specific gradient information
    was available for the estimation.  This is the case of the
    observation-specific gradient was supplied (see the \code{grad}
    argument for \code{\link{maxLik}}), or the log-likelihood function
    returns a vector of observation-specific values.
 }
 \author{
-   Arne Henningsen
+   Arne Henningsen, Ott Toomet
 }
 
-\seealso{\code{\link[sandwich]{estfun}}, \code{\link{maxLik}}.}
+\seealso{\code{\link{hessian}}, \code{\link[sandwich]{estfun}}, \code{\link{maxLik}}.}
 
 \examples{
 ## ML estimation of exponential duration model:
-t <- rexp(100, 2)
+t <- rexp(10, 2)
 loglik <- function(theta) log(theta) - theta*t
 
 ## Estimate with numeric gradient and hessian
 a <- maxLik(loglik, start=1 )
 
+gradient(a)
 # Extract the gradients evaluated at each observation
 library( sandwich )
-head(estfun( a ), 10)
+estfun( a )
 
 ## Estimate with analytic gradient.
 ## Note: it returns a vector
 gradlik <- function(theta) 1/theta - t
 b <- maxLik(loglik, gradlik, start=1)
-head(estfun( b ), 10)
+gradient(a)
+estfun( b )
 }
 
 \keyword{methods}
