@@ -1,5 +1,5 @@
 
-R version 3.2.2 (2015-08-14) -- "Fire Safety"
+R version 3.2.3 (2015-12-10) -- "Wooden Christmas-Tree"
 Copyright (C) 2015 The R Foundation for Statistical Computing
 Platform: x86_64-redhat-linux-gnu (64-bit)
 
@@ -821,6 +821,8 @@ Estimate(s): 2.116
 > ## print log likelihood value
 > logLik( a )
 [1] -25.05
+attr(,"df")
+[1] 1
 > ## compare with log likelihood value of summary object
 > all.equal( logLik( a ), logLik( summary( a ) ) )
 [1] TRUE
@@ -3099,4 +3101,4 @@ Estimate(s): 1.863
 > 
 > proc.time()
    user  system elapsed 
-  0.874   0.062   0.929 
+  0.922   0.057   0.972 
