@@ -1,5 +1,5 @@
 
-R version 3.2.2 (2015-08-14) -- "Fire Safety"
+R version 3.2.3 (2015-12-10) -- "Wooden Christmas-Tree"
 Copyright (C) 2015 The R Foundation for Statistical Computing
 Platform: x86_64-redhat-linux-gnu (64-bit)
 
@@ -198,6 +198,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
  TRUE  TRUE 
 > AIC( ml )
 [1] 407.2
+attr(,"df")
+[1] 2
 > coef( ml )
    mu sigma 
 1.181 1.816 
@@ -210,6 +212,8 @@ mu    -30.3   0.0
 sigma   0.0 -60.6
 > logLik( ml )
 [1] -201.6
+attr(,"df")
+[1] 2
 > maximType( ml )
 [1] "Newton-Raphson maximisation"
 > nIter( ml )
@@ -229,6 +233,8 @@ mu    0.033 0.000
 sigma 0.000 0.016
 > logLik( summary( ml ) )
 [1] -201.6
+attr(,"df")
+[1] 2
 > mlInd <- maxLik( llfInd, start = startVal )
 > print( summary( mlInd ), digits = 2 )
 --------------------------------------------
@@ -489,6 +495,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
  TRUE  TRUE 
 > AIC( mlBHHH )
 [1] 407.2
+attr(,"df")
+[1] 2
 > coef( mlBHHH )
    mu sigma 
 1.181 1.816 
@@ -503,6 +511,8 @@ attr(,"type")
 [1] "BHHH"
 > logLik( mlBHHH )
 [1] -201.6
+attr(,"df")
+[1] 2
 > maximType( mlBHHH )
 [1] "BHHH maximisation"
 > nIter( mlBHHH )
@@ -519,6 +529,8 @@ mu     0.033 -0.001
 sigma -0.001  0.018
 > logLik( summary( mlBHHH ) )
 [1] -201.6
+attr(,"df")
+[1] 2
 > all.equal( ml[-c(4,5,6,9,10) ], mlBHHH[ -c(4,5,6,9,10,11) ], tolerance = 1e-3 )
 [1] TRUE
 > round( mlBHHH[[ 11 ]], 3 )
@@ -957,6 +969,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
  TRUE  TRUE 
 > AIC( mlBFGSYC )
 [1] 407.2
+attr(,"df")
+[1] 2
 > coef( mlBFGSYC )
    mu sigma 
 1.181 1.816 
@@ -969,6 +983,8 @@ mu    -30.3   0.0
 sigma   0.0 -60.5
 > logLik( mlBFGSYC )
 [1] -201.6
+attr(,"df")
+[1] 2
 > maximType( mlBFGSYC )
 [1] "BFGSR maximization"
 > nIter( mlBFGSYC )
@@ -988,6 +1004,8 @@ mu    0.033 0.000
 sigma 0.000 0.017
 > logLik( summary( mlBFGSYC ) )
 [1] -201.6
+attr(,"df")
+[1] 2
 > all.equal( ml[-c(3,4,5,6,9,10)], mlBFGSYC[-c(3,4,5,6,9,10)], tolerance = 1e-3 )
 [1] TRUE
 > all.equal( ml[-c(5,6,9,10)], mlBFGSYC[-c(5,6,9,10)], tolerance = 1e-2 )
@@ -1381,6 +1399,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
  TRUE  TRUE 
 > AIC( mlBFGS )
 [1] 407.2
+attr(,"df")
+[1] 2
 > coef( mlBFGS )
    mu sigma 
 1.181 1.816 
@@ -1393,6 +1413,8 @@ mu    -30.3   0.0
 sigma   0.0 -60.6
 > logLik( mlBFGS )
 [1] -201.6
+attr(,"df")
+[1] 2
 > maximType( mlBFGS )
 [1] "BFGS maximization"
 > nIter( mlBFGS )
@@ -1410,6 +1432,8 @@ mu    0.033 0.000
 sigma 0.000 0.016
 > logLik( summary( mlBFGS ) )
 [1] -201.6
+attr(,"df")
+[1] 2
 > all.equal( ml[-c(4,5,6,9,10)], mlBFGS[-c(4,5,6,9,10,11)], tolerance = 1e-3 )
 [1] "Component \"control\": Attributes: < Component \"iterlim\": Mean relative difference: 0.3333 >"
 > # with individual log likelihood values
@@ -1733,6 +1757,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
  TRUE  TRUE 
 > AIC( mlNM )
 [1] 407.2
+attr(,"df")
+[1] 2
 > coef( mlNM )
    mu sigma 
 1.181 1.817 
@@ -1745,6 +1771,8 @@ mu    -30.3   0.0
 sigma   0.0 -60.6
 > logLik( mlNM )
 [1] -201.6
+attr(,"df")
+[1] 2
 > maximType( mlNM )
 [1] "Nelder-Mead maximization"
 > nIter( mlNM )
@@ -1762,6 +1790,8 @@ mu    0.033 0.000
 sigma 0.000 0.017
 > logLik( summary( mlNM ) )
 [1] -201.6
+attr(,"df")
+[1] 2
 > all.equal( ml[-c(3,4,5,6,9,10)], mlNM[-c(3,4,5,6,9,10,11)], tolerance = 1e-3 )
 [1] "Component \"control\": Attributes: < Component \"iterlim\": Mean relative difference: 2.333 >"
 > # with individual log likelihood values
@@ -2081,6 +2111,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
  TRUE  TRUE 
 > AIC( mlSANN )
 [1] 407.2
+attr(,"df")
+[1] 2
 > coef( mlSANN )
    mu sigma 
 1.182 1.817 
@@ -2093,6 +2125,8 @@ mu    -30.3   0.1
 sigma   0.1 -60.6
 > logLik( mlSANN )
 [1] -201.6
+attr(,"df")
+[1] 2
 > maximType( mlSANN )
 [1] "SANN maximization"
 > nIter( mlSANN )
@@ -2110,6 +2144,8 @@ mu    0.033 0.000
 sigma 0.000 0.017
 > logLik( summary( mlSANN ) )
 [1] -201.6
+attr(,"df")
+[1] 2
 > all.equal( ml[-c(3,4,5,6,9,10)], mlSANN[-c(3,4,5,6,9,10,11)], tolerance = 1e-3 )
 [1] "Component \"control\": Attributes: < Component \"iterlim\": Mean relative difference: 65.67 >"
 > # with individual log likelihood values
@@ -2554,6 +2590,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 FALSE  TRUE 
 > AIC( mlFix )
 [1] 406.2
+attr(,"df")
+[1] 1
 > coef( mlFix )
    mu sigma 
 1.000 1.825 
@@ -2565,6 +2603,8 @@ mu    NA    NA
 sigma NA   -60
 > logLik( mlFix )
 [1] -202.1
+attr(,"df")
+[1] 1
 > maximType( mlFix )
 [1] "Newton-Raphson maximisation"
 > nIter( mlFix )
@@ -2581,6 +2621,8 @@ mu     0 0.000
 sigma  0 0.017
 > logLik( summary( mlFix ) )
 [1] -202.1
+attr(,"df")
+[1] 1
 > mlIndFix <- maxLik( llfInd, start = startValFix, activePar = !isFixed )
 > mlIndFix1 <- maxLik( llfInd, start = startValFix, activePar = 2 )
 > all.equal( mlIndFix, mlIndFix1, tolerance = 1e-3 )
@@ -2908,6 +2950,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 FALSE  TRUE 
 > AIC( mlFixBHHH )
 [1] 406.2
+attr(,"df")
+[1] 1
 > coef( mlFixBHHH )
    mu sigma 
 1.000 1.825 
@@ -2921,6 +2965,8 @@ attr(,"type")
 [1] "BHHH"
 > logLik( mlFixBHHH )
 [1] -202.1
+attr(,"df")
+[1] 1
 > maximType( mlFixBHHH )
 [1] "BHHH maximisation"
 > nIter( mlFixBHHH )
@@ -2937,6 +2983,8 @@ mu     0 0.000
 sigma  0 0.018
 > logLik( summary( mlFixBHHH ) )
 [1] -202.1
+attr(,"df")
+[1] 1
 > all.equal( mlFix[ -c( 4, 5, 6, 9, 10 ) ], mlFixBHHH[ -c( 4, 5, 6, 9, 10, 11 ) ],
 +    tolerance = 1e-3 )
 [1] TRUE
@@ -3127,6 +3175,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 FALSE  TRUE 
 > AIC( mlFixBfgs )
 [1] 406.2
+attr(,"df")
+[1] 1
 > coef( mlFixBfgs )
    mu sigma 
 1.000 1.825 
@@ -3138,6 +3188,8 @@ mu    -30.0  -5.9
 sigma  -5.9 -60.0
 > logLik( mlFixBfgs )
 [1] -202.1
+attr(,"df")
+[1] 1
 > maximType( mlFixBfgs )
 [1] "BFGS maximization"
 > nIter( mlFixBfgs )
@@ -3155,6 +3207,8 @@ mu     0 0.000
 sigma  0 0.017
 > logLik( summary( mlFixBfgs ) )
 [1] -202.1
+attr(,"df")
+[1] 1
 > all.equal( mlghFix[ -c( 5, 6, 9, 10 ) ], mlFixBfgs[ -c( 5, 6, 9, 10, 11 ) ],
 +    tolerance = 1e-3 )
 [1] "Component \"gradient\": 'is.NA' value mismatch: 0 in current 1 in target"                      
@@ -3482,6 +3536,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 FALSE  TRUE 
 > AIC( mlFixNm )
 [1] 406.2
+attr(,"df")
+[1] 1
 > coef( mlFixNm )
    mu sigma 
 1.000 1.826 
@@ -3493,6 +3549,8 @@ mu    -30.0  -5.9
 sigma  -5.9 -60.0
 > logLik( mlFixNm )
 [1] -202.1
+attr(,"df")
+[1] 1
 > maximType( mlFixNm )
 [1] "Nelder-Mead maximization"
 > nIter( mlFixNm )
@@ -3510,6 +3568,8 @@ mu     0 0.000
 sigma  0 0.017
 > logLik( summary( mlFixNm ) )
 [1] -202.1
+attr(,"df")
+[1] 1
 > all.equal( mlFixBfgs[ -c(4,9,10) ], mlFixNm[ -c(4,9,10) ], tolerance = 1e-3 )
 [1] "Component \"gradient\": Mean relative difference: 0.003935"                                 
 [2] "Component \"control\": Attributes: < Component \"iterlim\": Mean relative difference: 1.5 >"
@@ -3854,6 +3914,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 FALSE  TRUE 
 > AIC( mlFixSann )
 [1] 406.2
+attr(,"df")
+[1] 1
 > coef( mlFixSann )
    mu sigma 
 1.000 1.825 
@@ -3865,6 +3927,8 @@ mu    -30.0  -5.9
 sigma  -5.9 -60.0
 > logLik( mlFixSann )
 [1] -202.1
+attr(,"df")
+[1] 1
 > maximType( mlFixSann )
 [1] "SANN maximization"
 > nIter( mlFixSann )
@@ -3882,6 +3946,8 @@ mu     0 0.000
 sigma  0 0.017
 > logLik( summary( mlFixSann ) )
 [1] -202.1
+attr(,"df")
+[1] 1
 > all.equal( mlFixBfgs[ -c(4,9,10) ], mlFixSann[ -c(4,9,10) ], 
 +    tolerance = 1e-3 )
 [1] "Component \"control\": Attributes: < Component \"iterlim\": Mean relative difference: 49 >"
@@ -4163,6 +4229,8 @@ Constrained optimization based on constrOptim
  TRUE  TRUE 
 > AIC( mlBfgsInEq )
 [1] 413.1
+attr(,"df")
+[1] 2
 > coef( mlBfgsInEq )
     mu  sigma 
 0.8197 1.6803 
@@ -4175,6 +4243,8 @@ mu    -35.4 -15.2
 sigma -15.2 -93.7
 > logLik( mlBfgsInEq )
 [1] -204.5
+attr(,"df")
+[1] 2
 > maximType( mlBfgsInEq )
 [1] "BFGS maximization"
 > nIter( mlBfgsInEq )
@@ -4192,6 +4262,8 @@ mu     0.030 -0.005
 sigma -0.005  0.011
 > logLik( summary( mlBfgsInEq ) )
 [1] -204.5
+attr(,"df")
+[1] 2
 > mlBfgsInEqInd <- maxLik( llfInd, start = startVal, constraints = inEq,
 +    method = "BFGS" )
 > print( summary( mlBfgsInEqInd ), digits = 2 )
@@ -4472,6 +4544,8 @@ Constrained optimization based on constrOptim
  TRUE  TRUE 
 > AIC( mlNmInEq )
 [1] 413.1
+attr(,"df")
+[1] 2
 > coef( mlNmInEq )
     mu  sigma 
 0.8197 1.6803 
@@ -4484,6 +4558,8 @@ mu    -35.4 -15.2
 sigma -15.2 -93.7
 > logLik( mlNmInEq )
 [1] -204.5
+attr(,"df")
+[1] 2
 > maximType( mlNmInEq )
 [1] "Nelder-Mead maximization"
 > nIter( mlNmInEq )
@@ -4501,6 +4577,8 @@ mu     0.030 -0.005
 sigma -0.005  0.011
 > logLik( summary( mlNmInEq ) )
 [1] -204.5
+attr(,"df")
+[1] 2
 > all.equal( mlBfgsInEq[-c(9,10,11)], mlNmInEq[-c(9,10,11)], tolerance = 1e-3 )
 [1] "Component \"control\": Attributes: < Component \"iterlim\": Mean relative difference: 1.5 >"
 > mlNmInEqInd <- maxLik( llfInd, start = startVal, constraints = inEq,
@@ -4674,6 +4752,8 @@ Constrained optimization based on constrOptim
  TRUE  TRUE 
 > AIC( mlSannInEq )
 [1] 413.1
+attr(,"df")
+[1] 2
 > coef( mlSannInEq )
     mu  sigma 
 0.8297 1.6702 
@@ -4686,6 +4766,8 @@ mu    -35.8 -15.1
 sigma -15.1 -96.1
 > logLik( mlSannInEq )
 [1] -204.5
+attr(,"df")
+[1] 2
 > maximType( mlSannInEq )
 [1] "SANN maximization"
 > nIter( mlSannInEq )
@@ -4703,6 +4785,8 @@ mu     0.030 -0.005
 sigma -0.005  0.011
 > logLik( summary( mlSannInEq ) )
 [1] -204.5
+attr(,"df")
+[1] 2
 > all.equal( mlBfgsInEq[-c(2,3,4,9,10,11)], mlSannInEq[-c(2,3,4,9,10,11)], 
 +    tolerance = 1e-3 )
 [1] "Component \"control\": Attributes: < Component \"iterlim\": Mean relative difference: 49 >"
@@ -4800,6 +4884,8 @@ penalty close to zero
  TRUE  TRUE 
 > AIC( mlBhhhCon )
 [1] 413.1
+attr(,"df")
+[1] 2
 > coef( mlBhhhCon )
     mu  sigma 
 0.8204 1.6797 
@@ -4812,6 +4898,8 @@ mu    -35.5 -15.2
 sigma -15.2 -93.8
 > logLik( mlBhhhCon )
 [1] -204.5
+attr(,"df")
+[1] 2
 > maximType( mlBhhhCon )
 [1] "BHHH maximisation"
 > nIter( mlBhhhCon )
@@ -4828,6 +4916,8 @@ mu     0.030 -0.005
 sigma -0.005  0.011
 > logLik( summary( mlBhhhCon ) )
 [1] -204.5
+attr(,"df")
+[1] 2
 > all.equal( mlGCon[ -c( 5, 6, 7, 9, 10 ) ], mlBhhhCon[ -c( 5, 6, 7, 9, 10, 11 ) ],
 +    tolerance = 5e-3 )
 [1] "Component \"estimate\": Mean relative difference: 0.01242"                                  
@@ -5062,6 +5152,8 @@ penalty close to zero
  TRUE  TRUE 
 > AIC( mlBfgsCon )
 [1] 413.1
+attr(,"df")
+[1] 2
 > coef( mlBfgsCon )
     mu  sigma 
 0.8198 1.6803 
@@ -5074,6 +5166,8 @@ mu    -35.4 -15.2
 sigma -15.2 -93.6
 > logLik( mlBfgsCon )
 [1] -204.5
+attr(,"df")
+[1] 2
 > maximType( mlBfgsCon )
 [1] "BFGS maximization"
 > nIter( mlBfgsCon )
@@ -5091,6 +5185,8 @@ mu     0.030 -0.005
 sigma -0.005  0.011
 > logLik( summary( mlBfgsCon ) )
 [1] -204.5
+attr(,"df")
+[1] 2
 > all.equal( mlBfgsCon[ -c( 4, 5, 6, 9, 10 ) ], mlGCon[ -c( 4, 5, 6, 9, 10 ) ],
 +    tolerance = 1e-3 )
  [1] "Names: 2 string mismatches"                                                    
@@ -5412,6 +5508,8 @@ penalty close to zero
  TRUE  TRUE 
 > AIC( mlNmCon )
 [1] 413.1
+attr(,"df")
+[1] 2
 > coef( mlNmCon )
     mu  sigma 
 0.8199 1.6801 
@@ -5424,6 +5522,8 @@ mu    -35.4 -15.2
 sigma -15.2 -93.7
 > logLik( mlNmCon )
 [1] -204.5
+attr(,"df")
+[1] 2
 > maximType( mlNmCon )
 [1] "Nelder-Mead maximization"
 > nIter( mlNmCon )
@@ -5441,6 +5541,8 @@ mu     0.030 -0.005
 sigma -0.005  0.011
 > logLik( summary( mlNmCon ) )
 [1] -204.5
+attr(,"df")
+[1] 2
 > all.equal( mlNmCon[ -c( 4, 5, 6, 9, 10 ) ], mlGCon[ -c( 4, 5, 6, 9, 10 ) ],
 +    tolerance = 1e-3 )
  [1] "Names: 2 string mismatches"                                                    
@@ -5743,6 +5845,8 @@ penalty close to zero
  TRUE  TRUE 
 > AIC( mlSannCon )
 [1] 413.1
+attr(,"df")
+[1] 2
 > coef( mlSannCon )
    mu sigma 
 0.816 1.684 
@@ -5755,6 +5859,8 @@ mu    -35.3 -15.3
 sigma -15.3 -92.8
 > logLik( mlSannCon )
 [1] -204.5
+attr(,"df")
+[1] 2
 > maximType( mlSannCon )
 [1] "SANN maximization"
 > nIter( mlSannCon )
@@ -5772,6 +5878,8 @@ mu     0.031 -0.005
 sigma -0.005  0.012
 > logLik( summary( mlSannCon ) )
 [1] -204.5
+attr(,"df")
+[1] 2
 > all.equal( mlSannCon[ -c(2,3,4,5,6,9,10,11) ], mlBfgsCon[ -c(2,3,4,5,6,9,10,11) ],
 +    tolerance = 1e-3 )
 [1] "Component \"control\": Attributes: < Component \"iterlim\": Mean relative difference: 0.98 >"
@@ -6285,4 +6393,4 @@ sigma 0.00  0.01
 > 
 > proc.time()
    user  system elapsed 
-  39.23    0.11   39.37 
+ 38.975   0.098  39.106 
