@@ -25,6 +25,8 @@ If you have questions, suggestions, or comments regarding the 'maxLik' package, 
 https://r-forge.r-project.org/projects/maxlik/
 > require(testthat)
 Loading required package: testthat
+> require(sandwich)
+Loading required package: sandwich
 > set.seed(0)
 > 
 > ## Test standard methods for "lm"
@@ -39,12 +41,16 @@ Loading required package: testthat
 > 
 > ## Test maxControl methods:
 > set.seed(9)
-> x <- rnorm(20)
-> ll <- function(mu) dnorm(x, mean=mu, log=TRUE)
+> x <- rnorm(20, sd=2)
+> ll <- function(par) dnorm(x, mean=par[1], sd=par[2], log=TRUE)
 > for(method in c("NR", "BFGS", "BFGSR")) {
 +    cat("-- method", method, "--\n")
-+    m <- maxLik(ll, start=0, method=method, control=list(iterlim=1))
-+    expect_equal(maxValue(m), -27.5157350664669, tolerance=0.001)
++    m <- maxLik(ll, start=c(0, 2), method=method, control=list(iterlim=1))
++    expect_equal(maxValue(m), -41.35, tolerance=0.01)
++    expect_true(is.vector(gradient(m)), info="'gradient' returns a vector")
++    expect_equal(length(gradient(m)), 2, info="'gradient(m)' is of length 2")
++    expect_true(is.matrix(estfun(m)), info="'estfun' returns a matrix")
++    expect_equal(dim(estfun(m)), c(20,2), info="'estfun(m)' is 20x2 matrix")
 +    cat("MaxControl structure:\n")
 +    show(maxControl(m))
 + }
@@ -117,4 +123,4 @@ printLevel = 0
 > 
 > proc.time()
    user  system elapsed 
-  0.497   0.047   0.648 
+  0.509   0.051   0.551 
