@@ -6,6 +6,7 @@ on R-Forge.
 
       CHANGES IN VERSION 1.3-6 (2015-11-08)
 
+* 'maxim' objects now support 'maxValue' and 'gradient' methods.  
 
       CHANGES IN VERSION 1.3-4 (2015-11-08)
 
